--- a/Project/pagina.css
+++ b/Project/pagina.css
@@ -11581,6 +11581,8 @@ body {
     /* display: flex; */
     align-items: center;
     justify-content: center;
+    font-size: xx-large;
+    font-weight: bold;
   }
 
 
